2008-01-02  Michael Hutchinson <mhutchinson@novell.com> 

	* templates/BooGtkSharpWindow.xft.xml: Use ${EscapedIdentifier} instead of
	  ${Name} so that classes/files can be named as language keywords.

2007-12-29 David Makovský (Yakeen) <yakeen@sannyas-on.net>

        * po/cs.po: updated translation

2007-12-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/ShellTextView.boo: Track api changes.
	* BooBinding.make, BooBinding.mdp, configure: Add missing dependencies.

2007-12-17  Lluis Sanchez Gual <lluis@novell.com> 

	* configure: Updated add-in versions.

2007-12-13  Lluis Sanchez Gual <lluis@novell.com> 

	* BooBinding.make, BooBinding.mdp: Synch the makefile with the mdp.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* BooBinding.addin.xml: Bump add-in versions.

2007-12-05  Lluis Sanchez Gual <lluis@novell.com> 

	* configure, BooBinding.make, BooBinding.mdp: Remove cecil dependency. Not
	  needed.

2007-12-05  Lluis Sanchez Gual <lluis@novell.com> 

	* configure: Use bash to run the config scripts.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* po/Makefile: Fix installation of .mo files.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* configure, BooBinding.make, BooBinding.addin.xml, BooBinding.mdp,
	  BooBinding.mds, Makefile.include, rules.make, Makefile.am,
	  monodevelop-boo.pc.in, Makefile, po, po/gl.po, po/cs.po, po/pt_BR.po,
	  po/fr.po, po/es.po, po/sl_SI.po, po/pl.po, po/it.po, po/pt.po, po/ca.po,
	  po/da.po, po/tr.po, po/ru.po, po/sv.po, po/de.po, po/po.mdse, po/ja.po,
	  po/zh_TW.po, po/Makefile, po/zh_CN.po: Directory reorganization.

2007-11-13  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/BooShellModel.boo: Cleanly return from the main thread if an exception
	  is thrown.

2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/BooParser.boo: Track LoggingService API changes.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* BooBinding.addin.xml: Bump MD version.
