@@ -94,11 +94,10 @@ class ShellTextView (SourceView, ICompletionWidget):
 		self.ModifyFont(Model.Properties.Font)
 
 		# FIXME: Put the project file somewhere other than /tmp
-		monodevelopConfigDir = System.IO.Path.Combine (Environment.GetFolderPath (Environment.SpecialFolder.Personal), ".config/MonoDevelop/")
-		shellProjectFile = System.IO.Path.Combine (monodevelopConfigDir, "${Model.LanguageName}-shell-project.mdp")
+		shellProjectFile = System.IO.Path.Combine (MonoDevelop.Core.PropertyService.ConfigPath, "${Model.LanguageName}-shell-project.mdp")
 
 		// 'touch' the file so the MD parsing foo sees it as existing.
-		_fakeFileName = System.IO.Path.Combine (monodevelopConfigDir, "shell-dummy-file.${Model.MimeTypeExtension}")
+		_fakeFileName = System.IO.Path.Combine (MonoDevelop.Core.PropertyService.ConfigPath, "shell-dummy-file.${Model.MimeTypeExtension}")
 		if not System.IO.File.Exists (_fakeFileName):
 			_fileInfo  = System.IO.File.Create (_fakeFileName)
 			_fileInfo.Close ()
